--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,11 @@
         "start": "node src/index.js",
         "worker": "node src/worker.js",
         "ws": "node src/ws/server.js",
-        "test:ws": "node scripts/test_websocket.js"
+        "test:ws": "node scripts/test_websocket.js",
+        "test:production": "node scripts/verify_production_ready.js",
+        "migrate:plans": "node scripts/add_adaptive_scaling_fields.js",
+        "test:adaptive": "node scripts/test_adaptive_scaling.js",
+        "test:fcm": "node scripts/send_test_push.js"
     },
     "dependencies": {
         "fastify": "^4.25.0",
@@ -17,7 +21,8 @@
         "pg-boss": "^9.0.0",
         "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.40.0",
         "nodemailer": "^6.9.7",
-        "pdfkit": "^0.13.0"
+        "pdfkit": "^0.13.0",
+        "firebase-admin": "^11.11.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.2",
