--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -15,7 +15,10 @@ dependencies:
   
   # HTTP & API
   http: ^1.1.2
+  firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
+  firebase_messaging: ^14.7.10
+  flutter_local_notifications: ^17.2.2
   google_sign_in: ^6.1.5
   web_socket_channel: ^2.4.0
   
