--- a/backend/package.json
+++ b/backend/package.json
@@ -20,15 +20,25 @@
         "migrate:phases": "node scripts/migrate_phases.js"
     },
     "dependencies": {
-        "fastify": "^4.25.0",
-        "pg": "^8.11.0",
-        "uuid": "^9.0.1",
+        "@fastify/cors": "^9.0.1",
+        "@fastify/helmet": "^11.1.1",
+        "@fastify/multipart": "^8.3.1",
+        "@fastify/swagger": "^8.15.0",
+        "@fastify/swagger-ui": "^3.1.0",
+        "@fastify/websocket": "^10.0.1",
+        "@google-cloud/speech": "^7.2.1",
+        "@google/genai": "^1.37.0",
+        "axios": "^1.13.2",
         "dotenv": "^16.3.1",
-        "pg-boss": "^9.0.0",
-        "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.40.0",
+        "fastify": "^4.25.0",
+        "firebase-admin": "^11.11.1",
+        "node-cron": "^4.2.1",
         "nodemailer": "^6.9.7",
         "pdfkit": "^0.13.0",
-        "firebase-admin": "^11.11.1"
+        "pg": "^8.11.0",
+        "pg-boss": "^9.0.3",
+        "uuid": "^9.0.1",
+        "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.40.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.2",
