--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
         "@fastify/cors": "^9.0.1",
         "@fastify/helmet": "^11.1.1",
         "@fastify/multipart": "^8.3.1",
+        "@fastify/rate-limit": "^9.1.0",
         "@fastify/swagger": "^8.15.0",
         "@fastify/swagger-ui": "^3.1.0",
         "@fastify/websocket": "^10.0.1",
